--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body, html {
-  margin: 0;
+  margin: auto;
   padding: 0;
-  width: 100%;
+  max-width: 1280px;
   height: 100%;
 }
 
@@ -19,8 +19,6 @@ header, nav, footer, section, article, div {
   box-sizing: border-box;
 }
 
-
-
 /*
  *
  * Header
@@ -29,41 +27,42 @@ header, nav, footer, section, article, div {
 
 .header {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  
   transition: min-height 0.3s;
+}
+
+.page-header {
+  display: flex;
+  padding: 1em;
+  border-bottom: 3px solid #7d97ad;
+  margin-bottom: 1.5em;
 }
 
 .header__inner {
   width: 100%;
-  /*margin-left: auto;
-  margin-right: auto;*/
 }
 
 .header__logo {
-  height: 80px;
-  margin-right: 1em;
-  vertical-align: top;
-  margin-top: 12px;
+  max-height: 90px;
+  width: auto;
+  float: left;
+
 }
 
 .header__title {
   font-weight: 300;
-  font-size: 4em;
- /* margin: 0.5em 0.25em;*/
-  display: inline-block;
   color: #2d3c49;
-  float: right;
   font-size: 4vw;
-  vertical-align: center;
+  margin: 0 0 0 auto;
+  text-align: right;
 }
+
+
 .header__subtitle {
-    font-weight: 200;
-    font-size: 2em;
-    color: #2d3c49;
-    align="right";
+  display: block;
+  /*font-size: 0.5em;*/
+  font-size: 2vw;
+  font-weight: 400;
 }
-
-
 /*
  *
  * Main
@@ -82,7 +81,6 @@ main {
  * Content
  *
  */
-
 
 /*
  *
@@ -104,23 +102,25 @@ main {
  *
  */
 
-.news__title {
-  font-weight: 300;
+.section__title {
+  font-weight: 400;
   font-size: 24px;
   color: #7d97ad;
   padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.top-news__item {
-  border-bottom: 1px solid #E0E0E0;
-  padding: 1em 0;
-  line-height: 19.2px;
+.section__subtitle {
+  font-weight: 200;
+  font-size: 20px;
+  color: #2d3c49;
+  padding-top: 5px;
 }
+
 
 /*
  *
  * Flexbox Grid
- *
  *
  */
 
@@ -139,7 +139,9 @@ main {
 
 .item-image {
     width: 100%;
+	height: 50%;
 }
+
 /*
  *
  * Footer
@@ -160,6 +162,7 @@ footer li {
   margin: 0 1em;
   min-width: 48px;
   min-height: 48px;
+  font-size: 20px;
 }
 
 footer a {
