--- a/css/main.css
+++ b/css/main.css
@@ -28,7 +28,60 @@ p {
   margin-right: 5px;
 }
 
-/* BEGIN MEDIA QUERY FONT RESIZE ON */
+/* begin resizable navigation bar */
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.active {
+  background-color: #7d97ad;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+    }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+        float: none;
+        display: block;
+        text-align: left;
+    }
+}
+/* end resizable navigation bar */
+
+/* begin media query font resize*/
 
 @media all and (min-width: 1024px) {
     p {
@@ -48,9 +101,8 @@ p {
     }
 
 }
+/*end media query font resize*/
 
-
-/*END MEDIA QUERY FONT RESIZE*/
 /*
  *
  * Header
@@ -77,7 +129,6 @@ p {
   max-height: 90px;
   width: auto;
   float: left;
-
 }
 
 .header__title {
